Fix for incorrect width on small screen

--- a/source/css/_parts/responsive.styl
+++ b/source/css/_parts/responsive.styl
@@ -19,7 +19,7 @@
         }
     }
 
-    #primary {
+    #primary, body.post #primary {
         &, &.has-toc {
             float: none;
             width: auto;
